# wildfire-road-safety

./: .clang-format  .gitignore  CMakeLists.txt  README.md
RoadRisk_NodeNFunction/: CMakeLists.txt  library.c  library.h
src/: CMakeLists.txt  dyn.c  dyn.h  main.c
src/Debug/: Logger.c  Logger.h
src/caching/: cache.c  cache.h
src/map/: fire_json_parse.c  fire_json_parse.h  json_lexer.c  json_lexer.h  json_parse.c  json_parse.h  map.c  map.h  op_json_parse.c  op_json_parse.h  web.c  web.h
src/models/: fire.h  geo.c  geo.h  road.c  road.h  vegetation.c  vegetation.h
src/risk/: risk.c  risk.h
src/simulation/: simulation.c  simulation.h
src/visual/: visual.c  visual.h
tests/: CMakeLists.txt  test.c
